--- a/index.html
+++ b/index.html
@@ -8,17 +8,80 @@
 
     <link rel="stylesheet" href="css/custom.min.css">
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <title>Documento</title>
 </head>
 
 <body>
-    <section class="container-fluid">
-        <div class="row">
-            <div class="border border-primary col-md-6">
-                ...
+    <!-- TODO: REMOVE BORDER MARKDOWN -->
+
+    <header class="navbar navbar-dark bg-dark sticky-top p-1 flex-md-nowrap shadow">
+        <!-- BRAND -->
+        <a href="" class="navbar-brand px-3 col-md-3 me-0">Company</a>
+        <!-- TOGGLE BUTTON -->
+        <!-- VISIBLE ONLY SMALL SCREENS -->
+        <button class="navbar-toggler d-md-none collapsed border-0 rounded-0" type="button" data-bs-toggle="collapse"
+            data-bs-target="#sidebarMenu" arial-controls="sidebarMenu" aria-expanded="false"
+            aria-label="Toggle Navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- SEARCH BAR -->
+        <!-- BREAK ON SMALL SCREENS -->
+        <form action="index.html" method="GET" class="input-group">
+            <input name="search" type="text" class="form-control text-white bg-dark rounded-0 border-0"
+                placeholder="Procurando por..." aria-label="Search" aria-describedby="buttonSearch">
+            <button class="btn btn-outline-secondary rounded-0 border-0" type="submit" id="buttonSearch"><i
+                    class="bi bi-search"></i></button>
+        </form>
+        <!-- NAV LIST -->
+        <!-- BREAK ON SMALL SCREENS -->
+        <ul class="navbar-nav px-3 w-100 flex-row justify-content-center align-items-center ">
+            <!-- USER BUTTON -->
+            <li class="nav-item dropdown me-2">
+                <a href="#" class="nav-link" id="userButton" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false"><i class="bi bi-person"></i> John Doe</a>
+                <ul class="dropdown-menu dropdown-menu-dark position-absolute" aria-labelledby="userButton">
+                    <li>
+                        <h6 class="dropdown-header">Settings</h6>
+                    </li>
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#logout">Logout</a>
+                    </li>
+                </ul>
+            </li>
+            <!-- UPGRADE BUTTON -->
+            <li class="nav-item">
+                <button class="btn btn-success rounded-0" type="button">UPGRADE TO PRO</button>
+            </li>
+        </ul>
+    </header>
+
+    <section class="container-fluid"></section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="logout" data-bs-backdrop="static" tabindex="-1" aria-labelledby="logouModal"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Deseja mesmo sair?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Selecione "Sair" abaixo se você estiver pronto para encerrar sua sessão atual.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Sair</button>
+                    <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancelar</button>
+                </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- SCRIPTS -->
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
